@@ -16,11 +16,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.math.BigDecimal;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
+import java.time.Year;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -35,6 +37,30 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public CarResponseDto saveCar(CarResponseDto carDto) {
+        if (carDto == null) {
+            throw new RestApiException("Received no information about car");
+        }
+        if (carDto.brand() == null || carDto.brand().isBlank()) {
+            throw new RestApiException("Car brand must not be not blank");
+        }
+        if (carDto.model() == null || carDto.model().isBlank()) {
+            throw new RestApiException("Car model must not be not blank");
+        }
+        if (carDto.year() < 1600 || carDto.year() > 3000 || carDto.model().isBlank()) {
+            throw new RestApiException("Car year must not be not blank and more than 1600 and less than 3000");
+        }
+        if (carDto.type() == null) {
+            throw new RestApiException("Car type must not be not blank");
+        }
+        if (carDto.fuelType() == null) {
+            throw new RestApiException("Fuel type must be not blank");
+        }
+        if (carDto.transmissionType() == null) {
+            throw new RestApiException("Transmission type must be not blank");
+        }
+        if (carDto.dayRentalPrice() == null || carDto.dayRentalPrice().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new RestApiException("Rental price must be greater than zero");
+        }
         Car entity = carMappingService.mapDtoToEntity(carDto);
         entity = carRepository.save(entity);
         return carMappingService.mapEntityToDto(entity);
@@ -42,19 +68,30 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getAllCars() {
-        return carRepository.findAll()
-                .stream()
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
+        Set<CarStatus> allowedCarStatuses = Set.of(
+                CarStatus.RENTED,
+                CarStatus.AVAILABLE,
+                CarStatus.UNDER_INSPECTION
+        );
+        return carList.stream()
                 .filter(Car::isActive)
-                .filter((car -> car.getCarStatus() == CarStatus.RENTED ||
-                        car.getCarStatus() == CarStatus.AVAILABLE ||
-                        car.getCarStatus() == CarStatus.UNDER_INSPECTION))
+                .filter((car -> allowedCarStatuses.contains(car.getCarStatus())))
                 .sorted(Comparator.comparing(Car::getType))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
+
     }
 
     @Override
     public List<CarResponseDto> getAllCarsToAdmin() {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
                 .sorted(Comparator.comparing(Car::isActive)
@@ -69,19 +106,33 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public CarResponseDto getCarById(Long id) {
+        if (id == null) {
+            throw new RestApiException("Enter car id");
+        }
         return carMappingService.mapEntityToDto(getOrThrow(id));
     }
 
     @Transactional
     @Override
     public Car getOrThrow(Long id) {
+        if (id == null) {
+            throw new RestApiException("Enter car id");
+        }
         return carRepository.findById(id).orElseThrow(() -> new CarNotFoundException(id));
     }
 
     @Override
     public List<CarResponseDto> getCarsByBrand(String brand) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
+        if (brand == null || brand.trim().isBlank() || brand.isEmpty()) {
+            throw new RestApiException("Enter car brand");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getBrand().equalsIgnoreCase(brand.trim()))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -89,8 +140,16 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByModel(String model) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
+        if (model == null || model.trim().isBlank() || model.isEmpty()) {
+            throw new RestApiException("Enter car model");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getModel().equalsIgnoreCase(model.trim()))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -98,8 +157,17 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByYear(int year) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
+        int currentYear = Year.now().getValue();
+        if(year > currentYear) {
+            throw new RestApiException("Year must be in the past");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getYear() == year)
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -107,8 +175,13 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByType(CarType type) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getType().equals(type))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -116,8 +189,13 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByFuelType(CarFuelType fuelType) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getFuelType().equals(fuelType))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -125,8 +203,13 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByTransmissionType(CarTransmissionType transmissionType) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getTransmissionType().equals(transmissionType))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -134,8 +217,13 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByCarStatus(CarStatus carStatus) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> Objects.nonNull(car.getCarStatus()) && car.getCarStatus().equals(carStatus))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -143,8 +231,13 @@ public class CarServiceImpl implements CarService {
 
     @Override
     public List<CarResponseDto> getCarsByDayRentalPrice(BigDecimal minDayRentalPrice, BigDecimal maxDayRentalPrice) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getDayRentalPrice().compareTo(minDayRentalPrice) >= 0 &&
                         car.getDayRentalPrice().compareTo(maxDayRentalPrice) <= 0)
                 .sorted(Comparator.comparing(Car::getDayRentalPrice))
@@ -169,6 +262,9 @@ public class CarServiceImpl implements CarService {
     @Override
     @Transactional
     public void updateCar(CarResponseDto carDto) {
+        if (carDto.id() == null) {
+            throw new RestApiException("Enter car id");
+        }
         Long id = carDto.id();
         Car existCar = getOrThrow(id);
         //TODO нужно ли ещё что-то обновлять?
@@ -179,6 +275,9 @@ public class CarServiceImpl implements CarService {
     @Override
     @Transactional
     public CarResponseDto deleteCarById(Long id) {
+        if (id == null) {
+            throw new RestApiException("Enter car id");
+        }
         Car existingCar = getOrThrow(id);
         existingCar.setActive(false);
         carRepository.save(existingCar);
@@ -188,6 +287,9 @@ public class CarServiceImpl implements CarService {
     @Transactional
     @Override
     public CarResponseDto restoreCar(Long id) {
+        if (id == null) {
+            throw new RestApiException("Enter car id");
+        }
         Car restoredCar = carRepository.findById(id).orElseThrow(() -> new RuntimeException("Car with id " + id + " not found"));
         if (restoredCar.isActive()) {
             throw new RestApiException("Car with id " + id + " is already active");
@@ -197,43 +299,77 @@ public class CarServiceImpl implements CarService {
         return carMappingService.mapEntityToDto(restoredCar);
     }
 
-
     @Override
     @Transactional
     public List<CarResponseDto> getAllAvailableCarsByDates(
             LocalDateTime startDateTime,
             LocalDateTime endDateTime) {
+        List<Car> carList = carRepository.findAll();
+        if (carList.isEmpty()) {
+            throw new RestApiException("No cars found");
+        }
+        if (startDateTime == null || endDateTime == null) {
+            throw new RestApiException("Start and end dates cannot be null");
+        }
+        if (startDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date and time must be today or in the future");
+        }
+        if (endDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("End date and time must be after the start day and time");
+        }
         return carRepository.findAll()
                 .stream()
-                .filter((car -> car.isActive() && car.getCarStatus() == CarStatus.AVAILABLE))
-                .filter(car -> bookingRepository.findAllByCarId(car.getId()).stream()
-                        .noneMatch(booking ->
-                                booking.getRentalStartDate().isBefore(endDateTime) &&
-                                        booking.getRentalEndDate().isAfter(startDateTime)
-                        )
-                )
+                .filter(car -> {
+                    List<Booking> bookings = bookingRepository.findAllByCarId(car.getId());
+                    if (bookings == null || bookings.isEmpty()) {
+                        return true;
+                    }
+                    return bookings.stream()
+                            .noneMatch(booking ->
+                                    booking.getRentalStartDate().isBefore(endDateTime) &&
+                                            booking.getRentalEndDate().isAfter(startDateTime)
+                            );
+                })
                 .map(carMappingService::mapEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional
     public List<CarResponseDto> filterAvailableCars(
             LocalDateTime startDateTime,
             LocalDateTime endDateTime,
-            String brand,
-            String fuelType,
-            String transmissionType,
+            List<String> brands,
+            List<String> fuelTypes,
+            List<String> transmissionTypes,
             BigDecimal minPrice,
             BigDecimal maxPrice) {
+        if (startDateTime == null || endDateTime == null) {
+            throw new RestApiException("Start and end dates cannot be null");
+        }
+        if (startDateTime.toLocalDate().isBefore(LocalDate.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
+        if (endDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
         return getAllAvailableCarsByDates(startDateTime, endDateTime)
                 .stream()
-                .filter(car -> brand == null || car.brand().equalsIgnoreCase(brand.trim()))
-                .filter(car -> fuelType == null || car.fuelType().name().equalsIgnoreCase(fuelType.trim()))
-                .filter(car -> transmissionType == null || car.transmissionType().name().equalsIgnoreCase(transmissionType.trim()))
-                .filter(car -> minPrice == null || car.dayRentalPrice().compareTo(minPrice) >= 0)
-                .filter(car -> maxPrice == null || car.dayRentalPrice().compareTo(maxPrice) <= 0)
-                .collect(Collectors.toList());
+                .filter(car ->
+                        brands == null || brands.isEmpty() ||
+                                brands.stream().anyMatch(brand ->
+                                        brand.equalsIgnoreCase(car.brand())))
+                .filter(car ->
+                        fuelTypes == null || fuelTypes.isEmpty() ||
+                                fuelTypes.stream().anyMatch(fuelType ->
+                                        fuelType.equalsIgnoreCase(car.fuelType())))
+                .filter(car ->
+                        transmissionTypes == null || transmissionTypes.isEmpty() ||
+                                transmissionTypes.stream().anyMatch(transmissionType ->
+                                        transmissionType.equalsIgnoreCase(car.transmissionType())))
+                .filter(car ->
+                        (minPrice == null || car.dayRentalPrice().compareTo(minPrice) >= 0) &&
+                                (maxPrice == null || car.dayRentalPrice().compareTo(maxPrice) <= 0))
+                .toList();
     }
 
     @Override
